Reorganize files and rename for better structure